drop down image alignment fixed

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -687,4 +687,5 @@ body .hywrap {
   -o-transition: all .4s linear;
   transition: all .4s linear;
   right: 5px;
+  top: 11px;
 }
