--- a/app/assets/stylesheets/neighborhoods.css.scss
+++ b/app/assets/stylesheets/neighborhoods.css.scss
@@ -548,6 +548,7 @@ $narrow-font: 'FontSiteSansLightCond', 'Arial Narrow', 'Arial', sans-serif;
   -o-transition: all .4s linear;
   transition: all .4s linear;
   right: 10px;
+  top: 13px;
 }
 .accordion .tab-section.active .accordian-heading:after {
   -webkit-transform: rotate(180deg);
